# DataBuildersPIM

./: CMakeLists.txt  CMakeLists.txt.rej  Categoria.cpp  Categoria.h  ConnectionDB.cpp  ConnectionDB.h  ConnectionSQL.cpp  Producto.cpp  Producto.h  main.cpp  main.cpp.rej  main_BACKUP_833.cpp  main_BACKUP_904.cpp  main_BASE_904.cpp  main_LOCAL_833.cpp  main_REMOTE_904.cpp
